Fixed more contrast issues

--- a/css/content.css
+++ b/css/content.css
@@ -11,6 +11,10 @@
     font-size: 1.3rem;
 }
 
+a{
+    color: #0076af;
+}
+
 .content li{
     font-size: 1.3rem;
 }
